<resources>
    <string name="app_name">THF</string>

    // login used
    <string name="pricec">Create New Price</string>
    <string name="salec">Record New Sale</string>
    <string name="productc">Create NEw Product</string>

    // delete
    <string name="priced">Delete Price</string>
    <string name="saled">Delete Sale</string>
    <string name="productd">Delete Product</string>

    <string name="pushc">Push changes</string>
    <string name="newrecord">New Record</string>

    // Price Page
    <string name="pricee">Enter Price Tag</string>
    <string name="prices">Enter Start Date</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="pricea">Active</string>


    <string-array name="numbers">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>

    <string-array name="numbers1">
        <item>$10</item>
        <item>$20</item>
        <item>$30</item>
        <item>$40</item>
        <item>$50</item>
    </string-array>

    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="Year">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>


    <string name="title_activity_main2">Price_activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_tab_activity">tab_activity</string>
    <string name="title_activity_main__tab_woo">Main_Activity_tab_woo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format" />
    <string name="title_activity_login2">LoginActivity2</string>
</resources>
