<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PriceActivity">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:layout_x="10dp"
        android:layout_y="635dp"
        android:text="Save Price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_x="158dp"
        android:layout_y="636dp"
        android:text="Send Price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SaveButton" />

    <EditText
        android:id="@+id/newPrice"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="620dp"
        android:layout_x="28dp"
        android:layout_y="30dp"
        android:ems="10"
        android:hint="Price Tag"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/SaveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sDay"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="72dp"
        android:layout_x="154dp"
        android:layout_y="152dp"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/eDay"
        app:layout_constraintEnd_toStartOf="@+id/sMonth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/sYear"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:layout_x="284dp"
        android:layout_y="153dp"
        android:ems="10"
        android:entries="@array/Year"
        android:inputType="date"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sMonth"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_x="21dp"
        android:layout_y="150dp"
        android:ems="10"
        android:entries="@array/Month"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/sYear"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/eDay"
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="512dp"
        android:layout_x="147dp"
        android:layout_y="309dp"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/eYear"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:layout_x="279dp"
        android:layout_y="307dp"
        android:ems="10"
        android:entries="@array/Year"
        android:inputType="date"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/eMonth"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="80dp"
        android:layout_x="20dp"
        android:layout_y="309dp"
        android:ems="10"
        android:entries="@array/Month"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="53dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:layout_toStartOf="@+id/SaveButton"
        android:layout_x="24dp"
        android:layout_y="274dp"
        android:text="@string/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_x="153dp"
        android:layout_y="109dp"
        android:text="@string/day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="56dp"
        android:layout_toStartOf="@+id/SaveButton"
        android:layout_x="286dp"
        android:layout_y="110dp"
        android:text="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_toStartOf="@+id/SaveButton"
        android:layout_x="22dp"
        android:layout_y="74dp"
        android:text="Start new Date"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="444dp"
        android:layout_x="19dp"
        android:layout_y="186dp"
        android:ems="10"
        android:hint="Enter Description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="53dp"
        android:layout_height="37dp"
        android:layout_marginTop="100dp"
        android:layout_toStartOf="@+id/SaveButton"
        android:layout_x="23dp"
        android:layout_y="112dp"
        android:text="@string/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_x="157dp"
        android:layout_y="271dp"
        android:text="@string/day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="104dp"
        android:layout_toStartOf="@+id/SaveButton"
        android:layout_x="283dp"
        android:layout_y="272dp"
        android:text="@string/year"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_x="22dp"
        android:layout_y="233dp"
        android:text="End Date"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="381dp"
        android:layout_height="316dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="16dp"
        android:layout_x="10dp"
        android:layout_y="635dp"
        android:text="Delete Price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
